examples/test/testpolicy7512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7512
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key34: value46
      key3: value0
      key33: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value42
          key20: value48
          key16: value11
      podSelector:
        matchLabels:
          key49: value11
          key35: value43
